style: update scroll up icon layout

--- a/templates/generalStudies.html
+++ b/templates/generalStudies.html
@@ -54,9 +54,9 @@
     </div>
     <div class="h-[calc(100vh_-_11rem)] relative">
         <div id="courseList"
-            class="relative courseList mx-4 min-[520px]:mx-24 p-5 rounded-xl h-95% overflow-auto bg-backgroundGreen">
+            class="courseList mx-4 min-[520px]:mx-24 p-5 rounded-xl h-95% overflow-auto bg-backgroundGreen">
         </div>
-        <div class="absolute right-9 min-[520px]:right-26 rounded-full bg-transparent text-orange-400 flex items-center justify-center mr-5 mb-4 hover:animate-bounce-y animate-fade-in"
+        <div class="absolute right-0 mb-2 mr-10 min-[520px]:mr-30 min-[520px]:mb-4 rounded-full bg-transparent text-orange-400 flex items-center justify-center hover:animate-bounce-y animate-fade-in"
             style="bottom: 4%;"
             id="scrollToTopIcon"
             onclick="scrollToTop()">
