--- a/static/style/output.css
+++ b/static/style/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.2 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -31,7 +31,6 @@
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
-6. Use the user's configured `sans` font-variation-settings by default.
 */
 
 html {
@@ -48,8 +47,6 @@ html {
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
-  font-variation-settings: normal;
-  /* 6 */
 }
 
 /*
@@ -436,9 +433,6 @@ video {
   --tw-pan-y:  ;
   --tw-pinch-zoom:  ;
   --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position:  ;
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to-position:  ;
   --tw-ordinal:  ;
   --tw-slashed-zero:  ;
   --tw-numeric-figure:  ;
@@ -486,9 +480,6 @@ video {
   --tw-pan-y:  ;
   --tw-pinch-zoom:  ;
   --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position:  ;
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to-position:  ;
   --tw-ordinal:  ;
   --tw-slashed-zero:  ;
   --tw-numeric-figure:  ;
@@ -526,6 +517,10 @@ video {
   pointer-events: none;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .absolute {
   position: absolute;
 }
@@ -539,40 +534,24 @@ video {
   bottom: 0px;
 }
 
-.left-0 {
-  left: 0px;
+.top-1\/2 {
+  top: 50%;
 }
 
 .left-1\/2 {
   left: 50%;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.right-9 {
-  right: 2.25rem;
-}
-
 .top-0 {
   top: 0px;
 }
 
-.top-1\/2 {
-  top: 50%;
+.left-0 {
+  left: 0px;
 }
 
-.-z-10 {
-  z-index: -10;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
-.z-10 {
-  z-index: 10;
+.right-0 {
+  right: 0px;
 }
 
 .z-20 {
@@ -583,21 +562,37 @@ video {
   z-index: 30;
 }
 
-.order-none {
-  order: 0;
+.z-10 {
+  z-index: 10;
 }
 
-.m-2 {
-  margin: 0.5rem;
+.z-0 {
+  z-index: 0;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.-z-30 {
+  z-index: -30;
+}
+
+.order-none {
+  order: 0;
 }
 
 .m-3 {
   margin: 0.75rem;
 }
 
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
+.m-2 {
+  margin: 0.5rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mx-4 {
@@ -610,19 +605,9 @@ video {
   margin-right: 2rem;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
 }
 
 .my-8 {
@@ -635,28 +620,45 @@ video {
   margin-bottom: auto;
 }
 
-.-ml-72 {
-  margin-left: -18rem;
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.-mr-14 {
-  margin-right: -3.5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.-mr-72 {
-  margin-right: -18rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
-.-mt-10 {
-  margin-top: -2.5rem;
+.ml-4 {
+  margin-left: 1rem;
 }
 
-.-mt-14 {
-  margin-top: -3.5rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 
-.-mt-16 {
-  margin-top: -4rem;
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mr-10 {
+  margin-right: 2.5rem;
 }
 
 .-mt-20 {
@@ -667,48 +669,40 @@ video {
   margin-top: -10rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.-ml-72 {
+  margin-left: -18rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
+.-mt-10 {
+  margin-top: -2.5rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
+.-mr-72 {
+  margin-right: -18rem;
 }
 
 .mt-1 {
   margin-top: 0.25rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.-mt-14 {
+  margin-top: -3.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.-mr-14 {
+  margin-right: -3.5rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.-mt-16 {
+  margin-top: -4rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .block {
@@ -723,64 +717,64 @@ video {
   display: none;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-3\/5 {
-  height: 60%;
-}
-
-.h-36 {
-  height: 9rem;
+.h-screen {
+  height: 100vh;
 }
 
 .h-44 {
   height: 11rem;
 }
 
-.h-56 {
-  height: 14rem;
+.h-full {
+  height: 100%;
 }
 
 .h-90\% {
   height: 90%;
 }
 
-.h-95\% {
-  height: 95%;
+.h-20 {
+  height: 5rem;
 }
 
-.h-96 {
-  height: 24rem;
+.h-56 {
+  height: 14rem;
+}
+
+.h-3\/5 {
+  height: 60%;
 }
 
 .h-\[calc\(100vh_-_11rem\)\] {
   height: calc(100vh - 11rem);
 }
 
-.h-full {
-  height: 100%;
+.h-95\% {
+  height: 95%;
 }
 
-.h-screen {
-  height: 100vh;
+.h-36 {
+  height: 9rem;
 }
 
-.w-10 {
-  width: 2.5rem;
+.h-96 {
+  height: 24rem;
 }
 
-.w-100 {
-  width: 25rem;
+.h-10 {
+  height: 2.5rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-20 {
   width: 5rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .w-44 {
@@ -791,16 +785,8 @@ video {
   width: 20rem;
 }
 
-.w-96 {
-  width: 24rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
+.w-100 {
+  width: 25rem;
 }
 
 .w-fit {
@@ -808,16 +794,12 @@ video {
   width: fit-content;
 }
 
-.w-36 {
-  width: 9rem;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
-.w-26 {
-  width: 6.5rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .-translate-x-1\/2 {
@@ -900,14 +882,14 @@ video {
   justify-content: space-around;
 }
 
-.gap-x-2 {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-}
-
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .overflow-auto {
@@ -918,6 +900,10 @@ video {
   overflow: hidden;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -926,28 +912,28 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.rounded-tl-lg {
+  border-top-left-radius: 0.5rem;
 }
 
 .rounded-bl-lg {
   border-bottom-left-radius: 0.5rem;
 }
 
-.rounded-br-lg {
-  border-bottom-right-radius: 0.5rem;
-}
-
-.rounded-tl-lg {
-  border-top-left-radius: 0.5rem;
-}
-
 .rounded-tr-lg {
   border-top-right-radius: 0.5rem;
 }
 
+.rounded-br-lg {
+  border-bottom-right-radius: 0.5rem;
+}
+
 .border-b-4 {
   border-bottom-width: 4px;
+}
+
+.border-t-8 {
+  border-top-width: 8px;
 }
 
 .border-b-8 {
@@ -962,10 +948,6 @@ video {
   border-right-width: 8px;
 }
 
-.border-t-8 {
-  border-top-width: 8px;
-}
-
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -976,9 +958,9 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.bg-backgroundBrown {
+.bg-slate-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(227 202 165 / var(--tw-bg-opacity));
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-backgroundGreen {
@@ -986,34 +968,14 @@ video {
   background-color: rgb(223 231 213 / var(--tw-bg-opacity));
 }
 
+.bg-backgroundBrown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 202 165 / var(--tw-bg-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-orange-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 237 213 / var(--tw-bg-opacity));
-}
-
-.bg-orange-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
-}
-
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
-.bg-sky-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(186 230 253 / var(--tw-bg-opacity));
-}
-
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-slate-200 {
@@ -1021,66 +983,101 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-l {
-  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+.bg-sky-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(186 230 253 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-orange-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 237 213 / var(--tw-bg-opacity));
+}
+
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-gradient1 {
-  --tw-gradient-from: #FFABAB var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 171 171 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-gradient-to-l {
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
 }
 
 .from-gradient3 {
-  --tw-gradient-from: #D9ACF5 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(217 172 245 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-from: #D9ACF5;
+  --tw-gradient-to: rgb(217 172 245 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-gradient2 {
-  --tw-gradient-to: #FEF2F4 var(--tw-gradient-to-position);
+.from-gradient1 {
+  --tw-gradient-from: #FFABAB;
+  --tw-gradient-to: rgb(255 171 171 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .to-gradient4 {
-  --tw-gradient-to: #FDEBED var(--tw-gradient-to-position);
+  --tw-gradient-to: #FDEBED;
 }
 
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
-}
-
-.p-4 {
-  padding: 1rem;
+.to-gradient2 {
+  --tw-gradient-to: #FEF2F4;
 }
 
 .p-5 {
   padding: 1.25rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-10 {
@@ -1093,53 +1090,43 @@ video {
   padding-right: 0.5rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
 }
 
 .pr-2 {
   padding-right: 0.5rem;
 }
 
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
 .pt-10 {
   padding-top: 2.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .text-center {
   text-align: center;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-3xl {
@@ -1147,13 +1134,9 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4\.5xl {
-  font-size: 2.625rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-6xl {
@@ -1166,14 +1149,13 @@ video {
   line-height: 1.5rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-4\.5xl {
+  font-size: 2.625rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-xl {
@@ -1186,20 +1168,20 @@ video {
   line-height: 1rem;
 }
 
-.font-black {
-  font-weight: 900;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
-.font-extrabold {
-  font-weight: 800;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-black {
+  font-weight: 900;
+}
+
+.font-extrabold {
+  font-weight: 800;
 }
 
 .tracking-wider {
@@ -1211,19 +1193,19 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.text-green-500 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-orange-400 {
@@ -1231,9 +1213,9 @@ video {
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
-.text-white {
+.text-green-500 {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .opacity-30 {
@@ -1260,12 +1242,12 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.duration-300 {
-  transition-duration: 300ms;
-}
-
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .hover\:-translate-y-1:hover {
@@ -1273,15 +1255,15 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:scale-110:hover {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-75:hover {
   --tw-scale-x: .75;
   --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1429,10 +1411,6 @@ video {
 }
 
 @media (min-width: 520px) {
-  .min-\[520px\]\:right-26 {
-    right: 6.5rem;
-  }
-
   .min-\[520px\]\:mx-24 {
     margin-left: 6rem;
     margin-right: 6rem;
@@ -1440,6 +1418,18 @@ video {
 
   .min-\[520px\]\:ml-24 {
     margin-left: 6rem;
+  }
+
+  .min-\[520px\]\:mr-28 {
+    margin-right: 7rem;
+  }
+
+  .min-\[520px\]\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .min-\[520px\]\:mr-30 {
+    margin-right: 7.5rem;
   }
 }
 
@@ -1493,14 +1483,14 @@ video {
     line-height: 1.75rem;
   }
 
-  .min-\[930px\]\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
   .min-\[930px\]\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .min-\[930px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -1561,24 +1551,8 @@ video {
     width: 16rem;
   }
 
-  .min-\[1301px\]\:w-20 {
-    width: 5rem;
-  }
-
-  .min-\[1301px\]\:w-24 {
-    width: 6rem;
-  }
-
   .min-\[1301px\]\:w-26 {
     width: 6.5rem;
-  }
-
-  .min-\[1301px\]\:w-32 {
-    width: 8rem;
-  }
-
-  .min-\[1301px\]\:w-36 {
-    width: 9rem;
   }
 
   .min-\[1301px\]\:text-lg {
