--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -60,7 +60,7 @@
         <div class="flex min-[1200px]:flex-auto justify-center h-full">
             <div
                 class="relative ml-4 min-[1200px]:ml-24 mr-4 p-5 rounded-xl h-90% w-96 min-[1201px]:w-11/12 my-5 min-[1201px]:mt-0 bg-backgroundGreen">
-                <div class="absolute z-20 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-20 h-20">
+                <div id="coffeeBlock" class="absolute z-20 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-20 h-20">
                     <div id="coffeeIcon"
                         class="z-30 flex justify-center items-center rounded-full animate-bounce bg-backgroundBrown">
                         <i class="bi bi-cup-hot text-white" style="font-size: 50px;"></i>
