feat: og and twitter image content

--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -20,6 +20,20 @@
     <title>FCU COURSE</title>
     <link rel="icon" href="/static/images/FF.png" type="image/icon">
     <link rel="stylesheet" href="../static/style/output.css">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fcu-course-search.zeabur.app/searchcourse">
+    <meta property="og:title" content="FCU Course Search">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://fcu-course-search.zeabur.app/static/images/FF.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://fcu-course-search.zeabur.app/searchcourse">
+    <meta property="twitter:title" content="FCU Course Search">
+    <meta property="twitter:description" content="">
+    <meta property="twitter:image" content="https://fcu-course-search.zeabur.app/static/images/FF.png">
 </head>
 
 <body class="h-screen bg-slate-100">
