--- a/templates/followCourse.html
+++ b/templates/followCourse.html
@@ -22,6 +22,20 @@
     <link rel="stylesheet" href="../static/style/output.css">
     <link rel="stylesheet" href="../static/style/style.css">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://fcu-course-search.zeabur.app/followcourse">
+    <meta property="og:title" content="FCU Course Search">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://fcu-course-search.zeabur.app/static/images/FF.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://fcu-course-search.zeabur.app/followcourse">
+    <meta property="twitter:title" content="FCU Course Search">
+    <meta property="twitter:description" content="">
+    <meta property="twitter:image" content="https://fcu-course-search.zeabur.app/static/images/FF.png">
+
     <style>
         .courseList {
             -ms-overflow-style: none;
