--- a/templates/searchCourse.html
+++ b/templates/searchCourse.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <title>FCU COURSE</title>
+    <title>FCU Course Search</title>
     <link rel="icon" href="/static/images/FF.png" type="image/icon">
     <link rel="stylesheet" href="../static/style/output.css">
 
